replace anonymous classes by lambdas/method references
Signed-off-by: Marion Knopp <marion.knopp@gmail.com>
Signed-off-by: Peter Gafert <peter.gafert@tngtech.com>